# fussel

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yml  docker-compose.yml  fussel.py  generate.bash  generate.sh  generate_site.sh  pyproject.toml  requirements.txt  sample_config.yml  serve.py  setup.sh
.github/workflows/: docker.yml  test.yml
docker/: Dockerfile  create_docker_image.sh  docker-compose.yml  nginx.conf  start.bash  start.sh  template_config.yml
fussel/: fussel.py  requirements.txt
fussel/generator/: __init__.py  config.py  generate.py  util.py
fussel/web/: index.html  package-lock.json  package.json  vite.config.js
fussel/web/public/: index.html
fussel/web/src/: index.css
fussel/web/src/component/: App.js  App.jsx  App.test.js  App.test.jsx  Collection.css  Collection.js  Collection.jsx  Collection.test.js  Collection.test.jsx  Collections.css  Collections.js  Collections.test.js  Collections.test.jsx  Info.css  Info.js  Navbar.css  Navbar.js  Navbar.jsx  Navbar.test.js  Navbar.test.jsx  NotFound.jsx  NotFound.test.js  NotFound.test.jsx  TimelineScrollbar.jsx  withRouter.js  withRouter.jsx  withRouter.test.js  withRouter.test.jsx
generator/: __init__.py  generate.py
resources/: animal-track-2.xcf  animal-track.xcf  fussel-watermark.xcf
tests/: conftest.py  test_albums.py  test_config.py  test_fussel.py  test_generate_utils.py  test_people.py  test_process_photo.py  test_site_generator.py  test_util.py
utils/: flat_json_to_nested_json.py
web/: package.json
web/public/: index.html
web/src/: index.js  index.jsx
web/src/component/: Album.js  Albums.css  Albums.js  App.js  Collection.css  Collection.js  Collections.css  Collections.js  Gallery.css  Navbar.css  Navbar.js  NotFound.css  People.css  People.js  Person.js  fussel.code-workspace  history.js  withRouter.js
